[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pixel.png" type="Texture" id=1]
[ext_resource path="res://gun Kid.png" type="Texture" id=2]
[ext_resource path="res://GunKid.gd" type="Script" id=3]
[ext_resource path="res://gun Kids gun.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 48.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 48.0

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, -56, 24, -48, 32, -24, 16, 0, 48, 16, 40, 16, 16, 8, 24, 56, 16, 56, 8, 32, -8, 32, -16, 56, -24, 56, -16, 8, -40, 16, -48, 16, -16, 0, -32, -24, -24, -48 )

[sub_resource type="CircleShape2D" id=4]
radius = 704.045

[node name="GunKid" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="Shirt" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -4.03076, 101.824 )
scale = Vector2( 210.758, 252.352 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 3 )

[node name="Area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Arm" type="Node2D" parent="."]
position = Vector2( 10.8773, 4.65913 )

[node name="Gun" type="Sprite" parent="Arm"]
position = Vector2( 40.2227, -5.99548 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )

[node name="GunPos" type="Position2D" parent="Arm"]
position = Vector2( 76.789, -8.99735 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 3.2, 5.6 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
